--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -584,90 +584,6 @@ better-defaults enables ido-mode, but we're using selectrum.
   (ido-mode -1)
 #+end_src
 * Keybindings
-** General keybindings
-*** Increase and decrease text size
-:PROPERTIES:
-:ID:       F52E0A6A-E615-4D9A-91C1-F5F3FA989F29
-:END:
-
-#+BEGIN_SRC emacs-lisp 
-(define-key global-map (kbd "C-+") 'text-scale-increase)
-(define-key global-map (kbd "C--") 'text-scale-decrease)
-#+END_SRC
-
-** Evil Mode
-:PROPERTIES:
-:ID:       340D6E26-10E8-4456-8F96-84AF2E20D075
-:END:
-
-#+BEGIN_SRC emacs-lisp 
-
-  (defun split-window-right-and-focus ()
-    (interactive)
-    (split-window-right)
-    (other-window 1))
-
-  (defun split-window-below-and-focus ()
-    (interactive)
-    (split-window-below)
-    (other-window 1))
-
-  (use-package undo-tree
-    :diminish undo-tree-mode
-    :ensure t
-    :config
-    (global-undo-tree-mode))
-
-  (use-package evil
-    :ensure t
-    :diminish evil-mode
-    :init
-    (setq evil-want-integration t)
-    (setq evil-want-keybinding nil)
-    :config
-    ;; Make movement keys work over visual lines
-    (define-key evil-normal-state-map (kbd "<remap> <evil-next-line>") 'evil-next-visual-line)
-    (define-key evil-normal-state-map (kbd "<remap> <evil-previous-line>") 'evil-previous-visual-line)
-    (define-key evil-motion-state-map (kbd "<remap> <evil-next-line>") 'evil-next-visual-line)
-    (define-key evil-motion-state-map (kbd "<remap> <evil-previous-line>") 'evil-previous-visual-line)
-
-    (evil-set-undo-system 'undo-tree)
-
-    ;; Make * search over whole symbols instead of words. This means 
-    ;; it will match "this-variable" rather than just "this".
-    (setq-default evil-symbol-word-search 1)
-    (setq-default evil-want-fine-undo t)
-
-    ;; Make insert mode just like regular emacs
-    (setq evil-insert-state-map (make-sparse-keymap))
-    (define-key evil-insert-state-map (kbd "<escape>") 'evil-normal-state)
-
-
-    (setq evil-move-cursor-back nil)
-
-    (evil-mode 1)
-
-    (use-package evil-surround
-      :straight t
-      :diminish evil-surround-mode
-      :config
-      (global-evil-surround-mode 1))
-
-    (use-package evil-matchit
-      :straight t
-      :config
-      (global-evil-matchit-mode 1)))
-
-    (use-package evil-collection
-      :after evil
-      :straight t
-      :config
-      (evil-collection-init))
-#+END_SRC
-
-#+RESULTS:
-: t
-
 ** General.el
 :PROPERTIES:
 :ID:       C3650B38-3717-4546-8831-F161203D2550
@@ -809,6 +725,120 @@ General.el is like evil-leader, but lets you define multiple leader keys / prefi
 #+RESULTS:
 : t
 
+** Other keybindings
+*** Increase and decrease text size
+:PROPERTIES:
+:ID:       F52E0A6A-E615-4D9A-91C1-F5F3FA989F29
+:END:
+
+#+BEGIN_SRC emacs-lisp 
+(define-key global-map (kbd "C-+") 'text-scale-increase)
+(define-key global-map (kbd "C--") 'text-scale-decrease)
+#+END_SRC
+
+** Jump list
+:PROPERTIES:
+:ID:       904c7ac3-2476-49f9-a012-88a1b03c1324
+:END:
+
+#+begin_src emacs-lisp
+    (use-package gumshoe
+      :general
+      (:states '(motion)
+               "C-o" 'gumshoe-backtrack-back
+               "C-i" 'gumshoe-backtrack-forward)
+      :straight (gumshoe :type git
+                         :host github
+                         :repo "Overdr0ne/gumshoe"
+                         :branch "master")
+      :init
+      (add-hook 'evil-mode-hook
+                (lambda ()
+                  (global-gumshoe-mode 1)
+                  (setq gumshoe-prefer-same-window t)
+                  (setq gumshoe-show-footprints-p nil)
+                  (defun consult-gumshoe-global ()
+                    (interactive)
+                    (consult-global-mark (ring-elements (oref gumshoe--global-backlog log)))))))
+#+end_src
+
+#+RESULTS:
+
+** Evil Mode
+:PROPERTIES:
+:ID:       340D6E26-10E8-4456-8F96-84AF2E20D075
+:END:
+
+#+BEGIN_SRC emacs-lisp 
+
+  (defun split-window-right-and-focus ()
+    (interactive)
+    (split-window-right)
+    (other-window 1))
+
+  (defun split-window-below-and-focus ()
+    (interactive)
+    (split-window-below)
+    (other-window 1))
+
+  (use-package undo-tree
+    :diminish undo-tree-mode
+    :ensure t
+    :config
+    (setq undo-tree-history-directory-alist `(("." . ,(concat user-emacs-directory
+                                                       "undo-tree"))))
+    (global-undo-tree-mode))
+
+  (use-package evil
+    :ensure t
+    :diminish evil-mode
+    :init
+    (setq evil-want-integration t)
+    (setq evil-want-keybinding nil)
+    :config
+    ;; Make movement keys work over visual lines
+    (define-key evil-normal-state-map (kbd "<remap> <evil-next-line>") 'evil-next-visual-line)
+    (define-key evil-normal-state-map (kbd "<remap> <evil-previous-line>") 'evil-previous-visual-line)
+    (define-key evil-motion-state-map (kbd "<remap> <evil-next-line>") 'evil-next-visual-line)
+    (define-key evil-motion-state-map (kbd "<remap> <evil-previous-line>") 'evil-previous-visual-line)
+
+    (evil-set-undo-system 'undo-tree)
+
+    ;; Make * search over whole symbols instead of words. This means 
+    ;; it will match "this-variable" rather than just "this".
+    (setq-default evil-symbol-word-search 1)
+    (setq-default evil-want-fine-undo t)
+
+    ;; Make insert mode just like regular emacs
+    (setq evil-insert-state-map (make-sparse-keymap))
+    (define-key evil-insert-state-map (kbd "<escape>") 'evil-normal-state)
+
+
+    (setq evil-move-cursor-back nil)
+
+    (evil-mode 1)
+
+    (use-package evil-surround
+      :straight t
+      :diminish evil-surround-mode
+      :config
+      (global-evil-surround-mode 1))
+
+    (use-package evil-matchit
+      :straight t
+      :config
+      (global-evil-matchit-mode 1)))
+
+    (use-package evil-collection
+      :after evil
+      :straight t
+      :config
+      (evil-collection-init))
+#+END_SRC
+
+#+RESULTS:
+: t
+
 * Navigating
 ** Projectile
 :PROPERTIES:
@@ -865,7 +895,6 @@ Projectile lets me switch between projects really easily. I set it up to default
 
 #+RESULTS:
 | 63 | Commander help buffer. | #[0 \3021 \303!0\202 \210\202 \210r\304!q\210\305c\210	\211\2031 \211@\306\307@A@#c\210A\266\202\202 \210eb\210\310 \210\311p\312"\210)\313 \207 [projectile-commander-help-buffer projectile-commander-methods (error) kill-buffer get-buffer-create Projectile Commander Methods: |
-
 
 
 ** Avy
