--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -212,24 +212,24 @@ This mode line is pretty.
 :END:
 
 #+BEGIN_SRC emacs-lisp 
-    (use-package base16-theme
-      :ensure t
-      :config
-      (setq base16-theme-256-color-source 'base16-shell)
-      (setq base16-distinct-fringe-background nil)
-      (load-theme 'base16-tomorrow-night t))
+  (use-package base16-theme
+    :ensure t
+    :config
+    (setq base16-theme-256-color-source 'base16-shell)
+    (setq base16-distinct-fringe-background nil)
+    (load-theme 'base16-tomorrow-night t))
 
-    ;; (use-package monokai-theme
-    ;;   :ensure t
-    ;;   :config
-    ;;   (setq monokai-use-variable-pitch nil)
-    ;;   (load-theme 'monokai t))
+  ;; (use-package monokai-theme
+  ;;   :ensure t
+  ;;   :config
+  ;;   (setq monokai-use-variable-pitch nil)
+  ;;   (load-theme 'monokai t))
 
 
-    ;; (use-package color-theme-sanityinc-tomorrow
-    ;;   :ensure t
-    ;;   :config
-    ;;   (color-theme-sanityinc-tomorrow-eighties))
+  ;; (use-package color-theme-sanityinc-tomorrow
+  ;;   :ensure t
+  ;;   :config
+  ;;   (color-theme-sanityinc-tomorrow-eighties))
 
 #+END_SRC
 
@@ -1189,53 +1189,78 @@ Version 2017-01-27"
     (diredfl-global-mode)
 
     (set-face-attribute 'diredfl-dir-priv nil
-                        :foreground (plist-get base16-tomorrow-night-colors :base0D)
-                        :background (plist-get base16-tomorrow-night-colors :base00))
+                        :foreground (plist-get base16-tomorrow-night-theme-colors :base0D)
+                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
 
     (set-face-attribute 'diredfl-read-priv nil
-                        :foreground (plist-get base16-tomorrow-night-colors :base0B)
-                        :background (plist-get base16-tomorrow-night-colors :base00))
+                        :foreground (plist-get base16-tomorrow-night-theme-colors :base0B)
+                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
 
     (set-face-attribute 'diredfl-write-priv nil
-                        :foreground (plist-get base16-tomorrow-night-colors :base0A)
-                        :background (plist-get base16-tomorrow-night-colors :base00))
+                        :foreground (plist-get base16-tomorrow-night-theme-colors :base0A)
+                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
 
     (set-face-attribute 'diredfl-exec-priv nil
-                        :foreground (plist-get base16-tomorrow-night-colors :base08)
-                        :background (plist-get base16-tomorrow-night-colors :base00))
+                        :foreground (plist-get base16-tomorrow-night-theme-colors :base08)
+                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
 
     (set-face-attribute 'diredfl-no-priv nil
-                        :foreground (plist-get base16-tomorrow-night-colors :base03)
-                        :background (plist-get base16-tomorrow-night-colors :base00))
+                        :foreground (plist-get base16-tomorrow-night-theme-colors :base03)
+                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
 
     (set-face-attribute 'diredfl-dir-name nil
-                        :foreground (plist-get base16-tomorrow-night-colors :base0C)
-                        :background (plist-get base16-tomorrow-night-colors :base00))
+                        :foreground (plist-get base16-tomorrow-night-theme-colors :base0C)
+                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
 
     (set-face-attribute 'diredfl-symlink nil
-                        :foreground (plist-get base16-tomorrow-night-colors :base05)
-                        :background (plist-get base16-tomorrow-night-colors :base00))
+                        :foreground (plist-get base16-tomorrow-night-theme-colors :base05)
+                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
 
     (set-face-attribute 'diredfl-dir-heading nil
                         :weight 'bold
-                        :foreground (plist-get base16-tomorrow-night-colors :base0B)
-                        :background (plist-get base16-tomorrow-night-colors :base00))
+                        :foreground (plist-get base16-tomorrow-night-theme-colors :base0B)
+                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
 
     (set-face-attribute 'diredfl-file-name nil
-                        :foreground (plist-get base16-tomorrow-night-colors :base05)
-                        :background (plist-get base16-tomorrow-night-colors :base00))
+                        :foreground (plist-get base16-tomorrow-night-theme-colors :base05)
+                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
 
     (set-face-attribute 'diredfl-file-suffix nil
-                        :foreground (plist-get base16-tomorrow-night-colors :base0B)
-                        :background (plist-get base16-tomorrow-night-colors :base00))
+                        :foreground (plist-get base16-tomorrow-night-theme-colors :base0B)
+                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
 
     (set-face-attribute 'diredfl-number nil
-                        :foreground (plist-get base16-tomorrow-night-colors :base0A)
-                        :background (plist-get base16-tomorrow-night-colors :base00))
+                        :foreground (plist-get base16-tomorrow-night-theme-colors :base0A)
+                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
 
     (set-face-attribute 'diredfl-date-time nil
-                        :foreground (plist-get base16-tomorrow-night-colors :base0D)
-                        :background (plist-get base16-tomorrow-night-colors :base00)))
+                        :foreground (plist-get base16-tomorrow-night-theme-colors :base0D)
+                        :background (plist-get base16-tomorrow-night-theme-colors :base00)))
+#+end_src
+
+#+RESULTS:
+: t
+
+** JSON
+:PROPERTIES:
+:ID:       984d8680-17d2-4877-8b15-3c7ae8a774c7
+:END:
+
+#+begin_src emacs-lisp
+  (use-package json-navigator
+    :straight t)
+#+end_src
+
+#+RESULTS:
+
+** Long lines
+:PROPERTIES:
+:ID:       6ef1a777-3f58-47e0-8d08-28bf7e231f93
+:END:
+Enable automatic optimizations for files with long lines
+
+#+begin_src emacs-lisp
+(global-so-long-mode t)
 #+end_src
 
 #+RESULTS:
@@ -1455,10 +1480,10 @@ Selectrum is basically how I want completing-read to work. Simple, composable, f
     :straight (selectrum :type git :host github :repo "raxod502/selectrum")
     :config
 
-    (plist-get base16-shell-colors-256 :base09)
+    (plist-get base16-theme-shell-colors-256 :base09)
     (set-face-attribute 'selectrum-current-candidate nil
-                        :foreground (plist-get base16-tomorrow-night-colors :base09)
-                        :background (plist-get base16-tomorrow-night-colors :base01))
+                        :foreground (plist-get base16-tomorrow-night-theme-colors :base09)
+                        :background (plist-get base16-tomorrow-night-theme-colors :base01))
 
     (selectrum-mode +1)
 
@@ -1542,9 +1567,9 @@ Selectrum is basically how I want completing-read to work. Simple, composable, f
     :straight (selectrum-prescient :type git :host github :repo "raxod502/prescient.el")
     :config
     (set-face-attribute 'selectrum-prescient-primary-highlight nil
-                        :foreground (plist-get base16-tomorrow-night-colors :base0E))
+                        :foreground (plist-get base16-tomorrow-night-theme-colors :base0E))
     (set-face-attribute 'selectrum-prescient-secondary-highlight nil
-                        :foreground (plist-get base16-tomorrow-night-colors :base0D))
+                        :foreground (plist-get base16-tomorrow-night-theme-colors :base0D))
     (selectrum-prescient-mode +1)
     (prescient-persist-mode +1))
 
@@ -1626,7 +1651,7 @@ Highlight the cursor whenever I scroll around.
       :straight t
       :config
       (beacon-mode 1)
-      (setq beacon-color (plist-get base16-tomorrow-night-colors :base02)))
+      (setq beacon-color (plist-get base16-tomorrow-night-theme-colors :base02)))
 #+end_src
 
 ** Dimmer
@@ -2373,8 +2398,8 @@ I typically use 2 spaces to indent.
     (defun esh-customize-faces ()
       (set-face-attribute 'eshell-ls-directory
                           nil
-                          :foreground (plist-get base16-tomorrow-night-colors :base0C)
-                          :background (plist-get base16-tomorrow-night-colors :base00)))
+                          :foreground (plist-get base16-tomorrow-night-theme-colors :base0C)
+                          :background (plist-get base16-tomorrow-night-theme-colors :base00)))
 
     (defmacro esh-section (name form &rest props)
       `(setq ,name
@@ -2398,24 +2423,24 @@ I typically use 2 spaces to indent.
 
     (esh-section esh-header
                  "λ"
-                 `(:foreground ,(plist-get base16-tomorrow-night-colors :base08)))
+                 `(:foreground ,(plist-get base16-tomorrow-night-theme-colors :base08)))
 
     (esh-section esh-user
                  (user-login-name)
-                 `(:foreground ,(plist-get base16-tomorrow-night-colors :base0B)))
+                 `(:foreground ,(plist-get base16-tomorrow-night-theme-colors :base0B)))
 
     (esh-section esh-dir
                  (concat "[" (abbreviate-file-name (eshell/pwd)) "]")
-                 `(:foreground ,(plist-get base16-tomorrow-night-colors :base0E)))
+                 `(:foreground ,(plist-get base16-tomorrow-night-theme-colors :base0E)))
 
     (esh-section esh-git
                  (when-let ((branch (magit-get-current-branch))) 
                    (concat " " branch))
-                 `(:foreground ,(plist-get base16-tomorrow-night-colors :base0D)))
+                 `(:foreground ,(plist-get base16-tomorrow-night-theme-colors :base0D)))
 
     (esh-section esh-footer
                  "\n→"
-                 `(:foreground ,(plist-get base16-tomorrow-night-colors :base0A)))
+                 `(:foreground ,(plist-get base16-tomorrow-night-theme-colors :base0A)))
 
     (setq eshell-prompt-regexp "→ ")
     (setq eshell-skip-prompt-function #'eshell-skip-prompt)
